# loxrs

./: .gitignore  Cargo.toml  README.md  main
bytecode/: Cargo.toml
bytecode/src/: chunk.rs  lib.rs  vm.rs
examples/: README.md  for_readme.lox
examples/fn/: fib.lox
examples/semantic/: closure.lox  duplicate.lox
examples/syntax/: assign.lox  block.lox  class_decl.lox  class_init.lox  class_self.lox  clock.lox  comment.lox  expr.lox  fn.lox  return.lox  while.lox
loxrs_treewalk/: Cargo.toml  README.md
loxrs_treewalk/examples/: for_readme.lox
loxrs_treewalk/src/: lib.rs  main.rs
loxrs_vm/: Cargo.toml
loxrs_vm/examples/: easy_expr.lox
loxrs_vm/src/: lib.rs
src/: abs.rs  lib.rs  main.rs  parser.rs  scanner.rs  token.rs  walk.rs
src/abs/: ast.rs  expr.rs  mod.rs  pretty_printer.rs  stmt.rs  token.rs
src/analizer/: mod.rs  resolver.rs
src/ast/: expr.rs  mod.rs  pretty_printer.rs  stmt.rs  visitor.rs
src/bytecode/: chunk.rs  mod.rs  vm.rs
src/interpreter/: env.rs  evaluate.rs  interpreter.rs  mod.rs  obj.rs  visitor.rs
src/lexer/: parser.rs  scanner.rs  token.rs
src/runtime/: env.rs  interpreter.rs  mod.rs  obj.rs  visitor.rs
src/walk/: mod.rs  parser.rs  (+1 more)
tests/: assign.lox  fn.lox  if.lox
treewalk/: Cargo.toml  README.md
treewalk/examples/fn/: self.lox
treewalk/examples/syntax/: while.lox
treewalk/src/: cli.rs  lib.rs  main.rs
treewalk/src/analizer/: resolver.rs
treewalk/src/ast/: expr.rs  pretty_printer.rs  stmt.rs
treewalk/src/lexer/: mod.rs  parser.rs  scanner.rs  token.rs
treewalk/src/runtime/: interpreter.rs  obj.rs
(+27 files in other folders)
