[package]
name = "loxrs"
version = "0.1.0"
authors = ["toyboot4e <toyboot4e@gmail.com>"]
edition = "2018"
description = "An implementation of the Lox language in Rust"

[[bin]]
name = "loxrs"
path = "src/main.rs"

[dependencies]
log = "0.4.0"
env_logger = "0.6.1"

itertools = "0.8"
anyhow = "1.0.31"
thiserror = "1.0.20"
# lazy_static = "1.3.0"
